--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -10,9 +10,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-
-    <artifactId> utils-1.3.5.jar</artifactId>
-    <version> 1.0-SNAPSHOT</version>
+    <groupId>com.epam</groupId>
+    <artifactId> utils</artifactId>
+    <version> 1.3.5</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
@@ -27,6 +27,11 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
     </dependencies>
 </project>
