--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -24,6 +24,9 @@
             <scope>test</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
     </dependencies>
 </project>
